--- a/www/app/dashboard/dashboard.html
+++ b/www/app/dashboard/dashboard.html
@@ -1,5 +1,152 @@
 <ion-view>
-  <ion-content>
-    <h1>Dashboard</h1>
-  </ion-content>
+
+    <ion-content style="padding: 0 10px;">
+        <div class="bar bar-header bar-light">
+            <h1 class="title">bar-light</h1>
+            <button class="button">Edit</button>
+        </div>
+        <!--    Buttons -->
+        <div>
+            <button class="button">
+                Default
+            </button><br>
+
+            <button class="button button-light">
+                button-light
+            </button><br>
+
+            <button class="button button-stable">
+                button-stable
+            </button><br>
+
+            <button class="button button-positive">
+                button-positive
+            </button><br>
+
+            <button class="button button-calm">
+                button-calm
+            </button><br>
+
+            <button class="button button-balanced">
+                button-balanced
+            </button><br>
+
+            <button class="button button-energized">
+                button-energized
+            </button><br>
+
+            <button class="button button-assertive">
+                button-assertive
+            </button><br>
+
+            <button class="button button-royal">
+                button-royal
+            </button><br>
+
+            <button class="button button-dark">
+                button-dark
+            </button><br>
+        </div>
+        <button class="button button-full button-positive">
+            Full Width Block Button
+        </button><br>
+        <button class="button button-outline button-positive">
+            Outlined Button
+        </button><br>
+        <button class="button button-clear button-positive">
+            Clear Button
+        </button><br>
+        <button class="button icon-left ion-home">Home</button>
+        <div class="button-bar">
+            <a class="button">First</a>
+            <a class="button">Second</a>
+            <a class="button">Third</a>
+        </div><br>
+
+        <!--    Buttons Ende-->
+        <!--        Liste-->
+        <div class="list">
+
+            <div class="item item-divider">
+                Candy Bars
+            </div>
+
+            <a class="item" href="#">
+                Butterfinger
+            </a>
+            <a class="item item-icon-left" href="#">
+                <i class="icon ion-mic-a"></i> Record album
+                <span class="item-note">
+                  Grammy
+                </span>
+            </a>
+
+            <a class="item item-icon-left" href="#">
+                <i class="icon ion-person-stalker"></i> Friends
+                <span class="badge badge-assertive">0</span>
+            </a>
+            <div class="item item-button-right">
+                Call Ma
+                <button class="button button-positive">
+                    <i class="icon ion-ios-telephone"></i>
+                </button>
+            </div>
+        </div>
+        <!--   Liste Ende-->
+        
+<!--        Cards-->
+   <div class="list card">
+
+  <div class="item item-avatar">
+    <img src="mcfly.jpg">
+    <h2>Marty McFly</h2>
+    <p>November 05, 1955</p>
+  </div>
+
+  <div class="item item-body">
+    <img class="full-image" src="delorean.jpg">
+    <p>
+      This is a "Facebook" styled Card. The header is created from a Thumbnail List item,
+      the content is from a card-body consisting of an image and paragraph text. The footer
+      consists of tabs, icons aligned left, within the card-footer.
+    </p>
+    <p>
+      <a href="#" class="subdued">1 Like</a>
+      <a href="#" class="subdued">5 Comments</a>
+    </p>
+  </div>
+
+</div>
+<!--   Cards Ende-->
+   
+<!--   Input Forms-->
+   <div class="list">
+  <label class="item item-input">
+    <span class="input-label">Username</span>
+    <input type="text">
+  </label>
+  <label class="item item-input">
+    <span class="input-label">Password</span>
+    <input type="password">
+  </label>
+</div>
+<div class="list">
+
+  <div class="item item-input-inset">
+    <label class="item-input-wrapper">
+      <input type="text" placeholder="Email">
+    </label>
+    <button class="button button-small">
+      Submit
+    </button>
+  </div>
+
+</div>
+<!--   Input Ende-->
+    </ion-content>
+    <div class="bar bar-footer">
+        <button class="button button-clear">Left</button>
+        <div class="title">Title</div>
+        <button class="button button-clear">Right</button>
+    </div>
 </ion-view>
