--- a/www/app/dashboard/dashboard.html
+++ b/www/app/dashboard/dashboard.html
@@ -1,49 +1,46 @@
 <ion-view>
 
     <ion-content style="padding: 0 10px;">
-        <div class="bar bar-header bar-light">
-            <h1 class="title">bar-light</h1>
-            <button class="button">Edit</button>
-        </div>
+      
         <!--    Buttons -->
         <div>
-            <button class="button">
+            <button class="button ripple">
                 Default
             </button><br>
 
-            <button class="button button-light">
+            <button class="button button-outline button-light ripple">
                 button-light
             </button><br>
 
-            <button class="button button-stable">
+            <button class="button button-outline button-stable">
                 button-stable
             </button><br>
 
-            <button class="button button-positive">
+            <button class="button button-outline button-positive">
                 button-positive
             </button><br>
 
-            <button class="button button-calm">
+            <button class="button button-outline button-calm">
                 button-calm
             </button><br>
 
-            <button class="button button-balanced">
+            <button class="button button-outline button-balanced">
                 button-balanced
             </button><br>
 
-            <button class="button button-energized">
+            <button class="button button-outline button-energized">
                 button-energized
             </button><br>
 
-            <button class="button button-assertive">
+            <button class="button button-outline button-assertive">
                 button-assertive
             </button><br>
 
-            <button class="button button-royal">
+            <button class="button button-outline button-royal">
                 button-royal
             </button><br>
 
-            <button class="button button-dark">
+            <button class="button button-outline button-dark">
                 button-dark
             </button><br>
         </div>
@@ -58,9 +55,8 @@
         </button><br>
         <button class="button icon-left ion-home">Home</button>
         <div class="button-bar">
-            <a class="button">First</a>
-            <a class="button">Second</a>
-            <a class="button">Third</a>
+            <a class="button button-positive">Second</a>
+            <a class="button button-royal">Third</a>
         </div><br>
 
         <!--    Buttons Ende-->
