--- a/www/index.html
+++ b/www/index.html
@@ -19,7 +19,7 @@
     <script src="cordova.js"></script>
 
     <!-- your app's js -->
-
+    <script src="lib/angular-whimsical-ripple/whimsicalRipple.js"></script>
     <script src="app/app.js"></script>
     <script src="app/menu/menu.js"></script>
     <script src="app/dashboard/dashboard.js"></script>
